--- a/public/src/index.html
+++ b/public/src/index.html
@@ -6,11 +6,12 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet"  href="/assets/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
   <app-root></app-root>
 </body>
-  <script src="https://use.fontawesome.com/0f4783d350.js"></script>
+
 
 </html>
