--- a/public/src/index.html
+++ b/public/src/index.html
@@ -4,14 +4,19 @@
   <meta charset="utf-8">
   <title>Public</title>
   <base href="/">
-
+  <script type="text/javascript">
+  function stopSpinner(){
+      setTimeout(()=>{document.getElementsByClassName("loaderFull")[0].style.display = "none";}, 500)
+  }
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet"  href="/assets/font-awesome/css/font-awesome.min.css">
 </head>
-<body>
+<body onload="stopSpinner()">
   <app-root></app-root>
 </body>
 
+
+<link rel="stylesheet"  href="/assets/font-awesome/css/font-awesome.min.css">
 
 </html>
